--- a/Home.html
+++ b/Home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head style="background-color:powderblue;">
     <img src="Images/box_of_scraps_logo.png" height="456" width="547"/>
     <title>Box of Scraps</title>
 </head>
