--- a/Home.html
+++ b/Home.html
@@ -5,6 +5,6 @@
     <title>Box of Scraps</title>
 </head>
 <body>
-
+    <video src="YouTube - Google Chrome 2024-12-08 15-22-25.mp4"width="500px"controls></video>
 </body>
 </html>
