--- a/Home.html
+++ b/Home.html
@@ -5,10 +5,16 @@
     <title>Box of Scraps</title>
 </head>
 <body>
-<<<<<<< Updated upstream
-=======
-    
->>>>>>> Stashed changes
+    <div style="background-color: rgb(255, 150, 150);">
+    <br>
     <video src="YouTube - Google Chrome 2024-12-08 15-22-25.mp4"width="500px"controls></video>
+    <br>
+    <a href="https://docs.google.com/document/d/103Hf2isLfwlPUpRI6MBf4AGnQkkn3PorZzDk0ltejZY/edit?tab=t.0">Visit example.com</a>
+    <ins>external into same tab</ins>
+    <br>
+    <a href="https://docs.google.com/document/d/103Hf2isLfwlPUpRI6MBf4AGnQkkn3PorZzDk0ltejZY/edit?tab=t.0" target="_blank">Visit Example.com</a>
+    <ins>external into diff tab</ins>
+    <br>
+    <ins>we are a team of high schoolers starting up a ftc team</ins>
 </body>
 </html>
