--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <div style="background-color: rgb(255, 150, 150);">
+    <h1 style="color: rgb(50,100,50);text-align: center;"
     <br>
     <video src="YouTube - Google Chrome 2024-12-08 15-22-25.mp4"width="500px"controls></video>
     <br>
