--- a/Home.html
+++ b/Home.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head style="background-color:powderblue;">
-    <img src="Images/box_of_scraps_logo.png" height="456" width="547"/>
-    <title>Box of Scraps</title>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+    .header-logo {background-color:powderblue;
+    font-family: lexend;
+    height: 120px;
+    margin: 0;
+    float left;
+    vertical-align: baseline;
+    }
+    .header-right {
+    float: right;
+    }
+</style>
 </head>
+
 <body>
+<div class="header-logo">
+<h1>
+    <img src="Images/box_of_scraps_logo.png" height="114" width="136.75" style="vertical-align:middle"/>
+    Box of Scraps
+    <div class="header-right">
+        About Us
+    </div>
+
+</h1>
+
     <video src="YouTube - Google Chrome 2024-12-08 15-22-25.mp4"width="500px"controls></video>
+</div>
 </body>
+
 </html>
