Margins fixed, color added

--- a/About Us.html
+++ b/About Us.html
@@ -3,27 +3,32 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        .header-logo {background-color:powderblue;
+        * {
+         margin: 0;
+         padding: 0;
+         }
+        .header-logo {background-color:#357096;
         font-family: lexend;
         height: 120px;
-        margin: 0;
         float left;
         vertical-align: baseline;
         }
         .header-right {
         float: right;
-        margin-right: 20px;
         margin-top: 40px;
         margin-right: 20px
         }
         a {
-        color: blue;
+        color: rgb(0,50,70);
         text-decoration: none;
+        }
+        .body {
+        background-color:#82B0CD;
         }
     </style>
 </head>
 
-<body>
+<body style="background-color: #ED9520">
 
 <div class="header-logo">
     <h1>
@@ -33,15 +38,12 @@
         <a href="Home.html">Box of Scraps</a>
         <div class="header-right">
             <a href="About%20Us.html">About Us</a>
-              |
+            |
             <a href="Fundraising.html">Fundraising</a>
-              |
+            |
             <a href="Programs.html">Programs</a>
-              |
+            |
             <a href="Updates.html">Updates</a>
         </div>
     </h1>
 </div>
-</body>
-
-</html>
