--- a/Home.html
+++ b/Home.html
@@ -3,27 +3,32 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        .header-logo {background-color:powderblue;
+        * {
+         margin: 0;
+         padding: 0;
+         }
+        .header-logo {background-color:#357096;
         font-family: lexend;
         height: 120px;
-        margin: 0;
         float left;
         vertical-align: baseline;
         }
         .header-right {
         float: right;
-        margin-right: 20px;
         margin-top: 40px;
         margin-right: 20px
         }
         a {
-        color: blue;
+        color: rgb(0,50,70);
         text-decoration: none;
+        }
+        .body {
+        background-color:#82B0CD;
         }
     </style>
 </head>
 
-<body>
+<body style="background-color: #ED9520">
 
 <div class="header-logo">
     <h1>
@@ -43,20 +48,20 @@
     </h1>
 </div>
 
-    <div style="background-color: rgb(255, 150, 150);">
+<div class="body">
     <h2 style="color: rgb(50,100,50);text-align: center;">
-    <br>
-    <video src="YouTube - Google Chrome 2024-12-08 15-22-25.mp4"width="500px"controls></video>
-    <br>
-    <a href="https://docs.google.com/document/d/103Hf2isLfwlPUpRI6MBf4AGnQkkn3PorZzDk0ltejZY/edit?tab=t.0">Visit example.com</a>
-    <ins>external into same tab</ins>
-    <br>
-    <a href="https://docs.google.com/document/d/103Hf2isLfwlPUpRI6MBf4AGnQkkn3PorZzDk0ltejZY/edit?tab=t.0" target="_blank">Visit Example.com</a>
-    <ins>external into diff tab</ins>
-    <br>
-    <ins>we are a team of high schoolers starting up a ftc team</ins>
+        <br>
+        <video src="YouTube - Google Chrome 2024-12-08 15-22-25.mp4"width="500px"controls></video>
+        <br>
+        <a href="https://docs.google.com/document/d/103Hf2isLfwlPUpRI6MBf4AGnQkkn3PorZzDk0ltejZY/edit?tab=t.0">Visit example.com</a>
+        <ins>external into same tab</ins>
+        <br>
+        <a href="https://docs.google.com/document/d/103Hf2isLfwlPUpRI6MBf4AGnQkkn3PorZzDk0ltejZY/edit?tab=t.0" target="_blank">Visit Example.com</a>
+        <ins>external into diff tab</ins>
+        <br>
+        <ins>we are a team of high schoolers starting up a ftc team</ins>
     </h2>
-    </div>
+</div>
 </body>
 
 </html>
