--- a/Programs.html
+++ b/Programs.html
@@ -3,27 +3,32 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        .header-logo {background-color:powderblue;
+        * {
+         margin: 0;
+         padding: 0;
+         }
+        .header-logo {background-color:#357096;
         font-family: lexend;
         height: 120px;
-        margin: 0;
         float left;
         vertical-align: baseline;
         }
         .header-right {
         float: right;
-        margin-right: 20px;
         margin-top: 40px;
         margin-right: 20px
         }
         a {
-        color: blue;
+        color: rgb(0,50,70);
         text-decoration: none;
+        }
+        .body {
+        background-color:#82B0CD;
         }
     </style>
 </head>
 
-<body>
+<body style="background-color: #ED9520">
 
 <div class="header-logo">
     <h1>
@@ -42,6 +47,3 @@
         </div>
     </h1>
 </div>
-</body>
-
-</html>
