--- a/Home.html
+++ b/Home.html
@@ -9,3 +9,16 @@
 
 </body>
 </html>
+
+<footer>
+    <head1>
+        <style> .left-text {text-align: left;}</style>
+        <a style="font-size: 32; font-weight: bold; font-family: Georgia, 'Times New Roman', Times, serif;">Contact Us</style>
+        </head1>
+    <p class="left-text"><a href="https://www.instagram.com/">Instagram: @BoxOfScraps</a></p>
+    <p class="left-text"><a href="insert email">Email: box of scraps</a></p>
+    <p class="left-text"><a href="https://www.instagram.com/">some other social media</a></p>
+<head2> <style> .center-text {text-align: center;} </style> 
+     <h2 class="center-text"><a href="#top">Back to Top</a></h2> 
+    </head2>
+</footer>
