added classes to footer

--- a/Home.html
+++ b/Home.html
@@ -24,6 +24,11 @@
         }
         .body {
         background-color:#82B0CD;
+        font-family: lexend;
+        }
+        .footer {
+        background-color:#82B0CD;
+        font-family: lexend;
         }
     </style>
 </head>
@@ -64,7 +69,7 @@
 </div>
 </body>
 
-<footer>
+<footer class="footer">
     <head1>
         <style> .left-text {text-align: left;}</style>
         <a style="font-size: 32; font-weight: bold; font-family: Georgia, 'Times New Roman', Times, serif;">Contact Us</style>
