Footer at bottom

--- a/Home.html
+++ b/Home.html
@@ -10,7 +10,6 @@
         .header-logo {background-color:#357096;
         font-family: lexend;
         height: 120px;
-        float left;
         vertical-align: baseline;
         }
         .header-right {
@@ -29,6 +28,10 @@
         .footer {
         background-color:#82B0CD;
         font-family: lexend;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
         }
     </style>
 </head>
