--- a/Home.html
+++ b/Home.html
@@ -44,7 +44,7 @@
 </div>
 
     <div style="background-color: rgb(255, 150, 150);">
-    <h2 style="color: rgb(50,100,50);text-align: center;">
+    <h2 style="color: rgb(50,100,50);text-align: center;font-family:verdana;">
     <br>
     <video src="YouTube - Google Chrome 2024-12-08 15-22-25.mp4"width="500px"controls></video>
     <br>
