--- a/Home.html
+++ b/Home.html
@@ -46,6 +46,12 @@
             color:#ED9520;
             text-decoration: none;
         }
+        .left-text {
+        text-align: left;
+        }
+        .center-text {
+        text-align: center;
+        }
     </style>
 </head>
 
@@ -89,14 +95,16 @@
 
 <footer class="footer">
     <head1>
-        <style> .left-text {text-align: left;}</style>
-        <a style="font-size: 32; font-weight: bold; font-family: Georgia, 'Times New Roman', Times, serif;">Contact Us</style>
+        <h1 class = "left-text">
+        <a style="font-size: 20px; font-weight: bold; font-family: Georgia, 'Times New Roman', Times, serif;">Contact Us</a>
+        </h1>
         </head1>
-    <p class="left-text"><a href="https://www.instagram.com/">Instagram: @BoxOfScraps</a></p>
-    <p class="left-text"><a href="insert email">Email: box of scraps</a></p>
+    <p class="left-text"><a href="https://www.instagram.com/melonsinthecosmos/">Instagram: @BoxOfScraps</a></p>
+    <p class="left-text"><a href="mailto:michaeldub@boxofscraps.net">Email: box of scraps</a></p>
     <p class="left-text"><a href="https://www.instagram.com/">some other social media</a></p>
-<head2> <style> .center-text {text-align: center;} </style> 
-     <h2 class="center-text"><a href="#top">Back to Top</a></h2> 
+<head2>
+     <h2 class="center-text">
+         <a href="#top">Back to Top</a></h2>
     </head2>
 </footer>
 </body>
