Footer background color change.

--- a/Home.html
+++ b/Home.html
@@ -29,7 +29,7 @@
         text-align: center;
         }
         .footer {
-        background-color:#59575D;
+        background-color:#E4B97E;
         font-family: lexend;
         left: 0;
         bottom: 0;
@@ -108,6 +108,4 @@
     </head2>
 </footer>
 </body>
-
-
 </html>
