--- a/Home.html
+++ b/Home.html
@@ -46,6 +46,19 @@
             color:#ED9520;
             text-decoration: none;
         }
+        .donation_button{
+            font-family: verdana;
+            color:#ED9520;
+            text-decoration: none;
+            position:fixed;
+            bottom: 40px;
+            right: 40px;
+            background-color: rgb(0,200,0); /* Green */
+            padding: 15px;
+            border-radius: 25px;
+
+
+        }
     </style>
 </head>
 
@@ -68,7 +81,6 @@
         </div>
     </h1>
 </div>
-
 <div class="body">
     <h2>
         <p1>Our Mission<br></p1>
@@ -86,7 +98,6 @@
     </h2>
 </div>
 
-
 <footer class="footer">
     <head1>
         <style> .left-text {text-align: left;}</style>
@@ -99,7 +110,13 @@
      <h2 class="center-text"><a href="#top">Back to Top</a></h2> 
     </head2>
 </footer>
-</body>
 
+</body>
+<donation_button class="donation_button">
+    
+    <style>.button{text-align: right;}</style>
+    <p class="button"><a href="https://hcb.hackclub.com/donations/start/box-of-scraps"target="blank">Donate Now!</a></p>
+    
+</donation_button>
 
 </html>
