--- a/Home.html
+++ b/Home.html
@@ -3,18 +3,22 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+        @font-face {
+            font-family: Gabarito;
+            src: url(fonts/Gabarito-VariableFont_wght.ttf);
+        }
         * {
          margin: 0;
          padding: 0;
          }
         .header-logo {background-color:#357096;
-        font-family: lexend;
+        font-family: Gabarito,serif;
         height: 120px;
         vertical-align: baseline;
         }
         .header-right {
         float: right;
-        margin-top: 40px;
+        margin-top: 35px;
         margin-right: 20px
         }
         a {
@@ -23,36 +27,38 @@
         }
         .body {
         background-color:#82B0CD;
-        font-family: lexend;
+        font-family: Gabarito,serif;
         height: 100%;
         color: rgb(50,100,50);
         text-align: center;
         }
         .footer {
         background-color:#E4B97E;
-        font-family: lexend;
+        font-family: Gabarito;
         left: 0;
         bottom: 0;
         width: 100%;
         text-align: center;
         }
         p1 {
-            font-family: lexend;
-            color:#357096;
-            text-decoration: underline;
+            font-family: Gabarito,serif;
+            color:RGB(135, 145, 150);
+            font-size: 40px;
         }
         p2 {
-            font-family: lexend;
-            color:#ED9520;
+            font-family: Gabriola,serif;
+            color:RGB(53, 112, 120);
+            font-size: 35px;
             text-decoration: none;
         }
         .left-text {
         text-align: left;
         }
         .center-text {
-        text-align: center;
+            text-align: center;
+        }
         .donation_button{
-            font-family: verdana;
+            font-family: Gabarito;
             color:#ED9520;
             text-decoration: none;
             position:fixed;
@@ -90,6 +96,7 @@
         <p2>To educate a new generation of cirtical thinking engineers to innovate our futures.</p2>
         <!--<video src="YouTube - Google Chrome 2024-12-08 15-22-25.mp4"width="500px"controls></video>-->
         <br>
+
         <a href="https://docs.google.com/document/d/103Hf2isLfwlPUpRI6MBf4AGnQkkn3PorZzDk0ltejZY/edit?tab=t.0">Visit example.com</a>
         <ins>external into same tab</ins>
         <br>
@@ -104,11 +111,12 @@
 <footer class="footer">
     <head1>
         <h1 class = "left-text">
-        <a style="font-size: 20px; font-weight: bold; font-family: Georgia, 'Times New Roman', Times, serif;">Contact Us</a>
+        <a style="font-size: 20px; font-weight: bold; font-family: Gabarito, 'Times New Roman', Times, serif;">Contact Us</a>
         </h1>
         </head1>
     <p class="left-text"><a href="https://www.instagram.com/melonsinthecosmos/">Instagram: @BoxOfScraps</a></p>
     <p class="left-text"><a href="mailto:michaeldub@boxofscraps.net">Email: box of scraps</a></p>
+
     <p class="left-text"><a href="https://www.instagram.com/">some other social media</a></p>
 <head2>
      <h2 class="center-text">
