--- a/About Us.html
+++ b/About Us.html
@@ -74,7 +74,7 @@
             float: left;
             width: 48%;
             padding: 6px;
-            height: 200px;
+            height: 500px;
             align-content: center;
         }
 
@@ -91,7 +91,7 @@
 <div class="header-logo">
     <h1>
         <a href="Home.html">
-            <img src="Images/box_of_scraps_logo.png" height="114" width="136.75" style="vertical-align:middle"/>
+            <img src="Images/box_of_scraps_logo.png" height="114" style="vertical-align:middle"/>
         </a>
         <a href="Home.html">Box of Scraps</a>
         <div class="header-right">
@@ -112,21 +112,37 @@
     </h2>
     <div class="row" style="margin-left: 60px">
         <div class="column" style="background-color: rgb(130, 166, 185);">
-            <h2>Who are we?</h2>
-            <p>Some text..</p>
+            <h2 style="font-size: 50px">Who are we?</h2>
+            <p style="font-size: 30px">We are a rookie community First Tech Challenge (FTC) team based in the Santa Clara area. Our team consists of
+                motivated and aspiring individuals who are dedicated to enhancing their knowledge of all things STEM and to
+                harboring a new generation of future ready engineers. You can see and contact off the team members below.
+            </p>
         </div>
         <div class="column" style="background-color:rgb(130, 166, 185);">
-            <h2>Image</h2>
+            <h2><img src="Images/box_of_scraps_logo.png"/></h2>
         </div>
     </div>
 
     <div class="row" style="margin-left: 60px; margin-top: 20px;">
         <div class="column" style="background-color: rgb(130, 166, 185);">
-            <h2>Image</h2>
+            <h2><img src="Images/first%20tech%20challnege.jpg" width="450"/></h2>
         </div>
         <div class="column" style="background-color:rgb(130, 166, 185);">
-            <h2>Who are we?</h2>
-            <p>Some text..</p>
+            <h2 style="font-size: 50px">What is FTC?</h2>
+            <p style="font-size: 30px">What is FTC?</p>
+        </div>
+    </div>
+
+    <div class="row" style="margin-left: 60px; margin-top: 20px;">
+
+        <div class="column" style="background-color:rgb(130, 166, 185);">
+            <h2 style="font-size: 50px">Our Goals</h2>
+            <p style="font-size: 30px">Our current goal is to raise funds and establish groundwork so that next FTC season we can hit the ground
+            running and compete to the best of our abilities. Achieving this goal implies finding sponsors,a applying for grants
+            , and running fundraisers like bake sales and summer programs.</p>
+        </div>
+        <div class="column" style="background-color: rgb(130, 166, 185);">
+            <h2>image</h2>
         </div>
     </div>
 </div>
