--- a/About Us.html
+++ b/About Us.html
@@ -108,7 +108,7 @@
 <div class="body">
     <h2>
         <p1>Our Mission<br></p1>
-        <p2>To educate a new generation of cirtical thinking engineers to innovate our futures.</p2>
+        <p2>To educate a new generation of critical thinking engineers who will innovate our futures.</p2>
     </h2>
     <div class="row" style="margin-left: 60px">
         <div class="column" style="background-color: rgb(130, 166, 185);">
@@ -145,22 +145,35 @@
             <h2>image</h2>
         </div>
     </div>
+<br><br>
 </div>
 
 <footer class="footer">
-    <head1>
-        <h1 class = "left-text">
-            <a style="font-size: 20px; font-weight: bold; font-family: Gabarito, 'Times New Roman', Times, serif;">Contact Us</a>
-        </h1>
-    </head1>
-    <p class="left-text"><a href="https://www.instagram.com/melonsinthecosmos/">Instagram: @BoxOfScraps</a></p>
-    <p class="left-text"><a href="mailto:michaeldub@boxofscraps.net">Email: box of scraps</a></p>
+    <br>
+    <div class="row" style="margin-left: 60px; margin-top: 20px;">
+        <div class="column" style="background-color: rgb(208, 175, 126); height: 150px;">
+            <h1 style="text-align: center;">Contact Us</h1>
+            <h2 style="padding-left: 33%;"><p class="left-text"><a href="https://www.instagram.com/melonsinthecosmos/">• Instagram: @BoxOfScraps</a></p>
+                <p class="left-text"><a href="mailto:michaeldub@boxofscraps.net">• Email Us: scrap@boxofscraps.net</a></p>
+                <p class="left-text"><a href="https://www.instagram.com/">• some other social media</a></p>
+            </h2>
+        </div>
+        <div class="column" style="background-color:rgb(208, 175, 126); height: 150px">
+            <h1>Explore the Website!</h1>
+            <h2 style="font-size: 35px;"><a href="About%20Us.html">About Us</a>
+                |
+                <a href="Fundraising.html">Fundraising</a>
+                <br>
+                <a href="Programs.html">Programs</a>
+                |
+                <a href="Updates.html">Updates</a></h2>
+        </div>
+    </div>
+<br>
+    <h2 class="center-text">
+        <a href="#top">Back to Top</a></h2>
+    <br>
 
-    <p class="left-text"><a href="https://www.instagram.com/">some other social media</a></p>
-    <head2>
-        <h2 class="center-text">
-            <a href="#top">Back to Top</a></h2>
-    </head2>
 </footer>
 </body>
 <donation_button class="donation_button">
