--- a/root/Home.html
+++ b/root/Home.html
@@ -80,7 +80,7 @@
         </a>
         <a href="Home.html">Box of Scraps</a>
         <div class="header-right">
-            <a href="About%20Us.html">About Us</a>
+            <a href="About Us.html">About Us</a>
             |
             <a href="Fundraising.html">Fundraising</a>
             |
