--- a/root/Programs.html
+++ b/root/Programs.html
@@ -10,7 +10,6 @@
         * {
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
         }
         .header-logo {background-color:#357096;
             font-family: Gabarito,serif;
@@ -30,7 +29,7 @@
             background-color:#82B0CD;
             font-family: Gabarito,serif;
             height: 100%;
-            color: RGB(115, 125, 130);
+            color: rgb(50,100,50);
             text-align: center;
         }
         .footer {
@@ -70,7 +69,7 @@
             border-radius: 25px;
         }
 
-        .column {
+                .column {
             float: left;
             width: 48%;
             padding: 6px;
@@ -91,11 +90,11 @@
 <div class="header-logo">
     <h1>
         <a href="Home.html">
-            <img src="Images/box_of_scraps_logo.png" height="114" style="vertical-align:middle"/>
+            <img src="Images/box_of_scraps_logo.png" height="114" width="136.75" style="vertical-align:middle"/>
         </a>
         <a href="Home.html">Box of Scraps</a>
         <div class="header-right">
-            <a href="About%20Us.html">About Us</a>
+            <a href="About Us.html">About Us</a>
             |
             <a href="Fundraising.html">Fundraising</a>
             |
@@ -107,45 +106,8 @@
 </div>
 <div class="body">
     <h2>
-        <p1>Our Mission<br></p1>
-        <p2>To educate a new generation of critical thinking engineers who will innovate our futures.</p2>
+        <br>
     </h2>
-    <div class="row" style="margin-left: 60px">
-        <div class="column" style="background-color: rgb(130, 166, 185);">
-            <h2 style="font-size: 50px">Who are we?</h2>
-            <p style="font-size: 30px">We are a rookie community First Tech Challenge (FTC) team based in the Santa Clara area. Our team consists of
-                motivated and aspiring individuals who are dedicated to enhancing their knowledge of all things STEM and to
-                harboring a new generation of future ready engineers. You can see and contact off the team members below.
-            </p>
-        </div>
-        <div class="column" style="background-color:rgb(130, 166, 185);">
-            <h2><img src="Images/box_of_scraps_logo.png"/></h2>
-        </div>
-    </div>
-
-    <div class="row" style="margin-left: 60px; margin-top: 20px;">
-        <div class="column" style="background-color: rgb(130, 166, 185);">
-            <h2><img src="Images/first%20tech%20challnege.jpg" width="450"/></h2>
-        </div>
-        <div class="column" style="background-color:rgb(130, 166, 185);">
-            <h2 style="font-size: 50px">What is FTC?</h2>
-            <p style="font-size: 30px">What is FTC?</p>
-        </div>
-    </div>
-
-    <div class="row" style="margin-left: 60px; margin-top: 20px;">
-
-        <div class="column" style="background-color:rgb(130, 166, 185);">
-            <h2 style="font-size: 50px">Our Goals</h2>
-            <p style="font-size: 30px">Our current goal is to raise funds and establish groundwork so that next FTC season we can hit the ground
-            running and compete to the best of our abilities. Achieving this goal implies finding sponsors,a applying for grants
-            , and running fundraisers like bake sales and summer programs.</p>
-        </div>
-        <div class="column" style="background-color: rgb(130, 166, 185);">
-            <h2>image</h2>
-        </div>
-    </div>
-<br><br>
 </div>
 
 <footer class="footer">
@@ -160,7 +122,7 @@
         </div>
         <div class="column" style="background-color:rgb(208, 175, 126); height: 150px">
             <h1>Explore the Website!</h1>
-            <h2 style="font-size: 35px;"><a href="About%20Us.html">About Us</a>
+            <h2 style="font-size: 35px;"><a href="About Us.html">About Us</a>
                 |
                 <a href="Fundraising.html">Fundraising</a>
                 <br>
@@ -169,14 +131,13 @@
                 <a href="Updates.html">Updates</a></h2>
         </div>
     </div>
-<br>
+    <br>
     <h2 class="center-text">
         <a href="#top">Back to Top</a></h2>
     <br>
 
 </footer>
 </body>
-
 <donation_button class="donation_button">
 
     <style>.button{text-align: right;}</style>
