--- a/root/Updates.html
+++ b/root/Updates.html
@@ -94,7 +94,7 @@
         </a>
         <a href="Home.html">Box of Scraps</a>
         <div class="header-right">
-            <a href="About%20Us.html">About Us</a>
+            <a href="About Us.html">About Us</a>
             |
             <a href="Fundraising.html">Fundraising</a>
             |
@@ -122,7 +122,7 @@
         </div>
         <div class="column" style="background-color:rgb(208, 175, 126); height: 150px">
             <h1>Explore the Website!</h1>
-            <h2 style="font-size: 35px;"><a href="About%20Us.html">About Us</a>
+            <h2 style="font-size: 35px;"><a href="About Us.html">About Us</a>
                 |
                 <a href="Fundraising.html">Fundraising</a>
                 <br>
