--- a/root/About Us.html
+++ b/root/About Us.html
@@ -32,6 +32,7 @@
             height: 100%;
             color: RGB(115, 125, 130);
             text-align: center;
+            min-width: 40px;
         }
         .footer {
             background-color:#E4B97E;
@@ -83,6 +84,9 @@
             display: table;
             clear: both;
         }
+        img{
+        max-width: 100%;
+        }
     </style>
 </head>
 
@@ -112,8 +116,8 @@
     </h2>
     <div class="row" style="margin-left: 60px">
         <div class="column" style="background-color: rgb(130, 166, 185);">
-            <h2 style="font-size: 50px">Who are we?</h2>
-            <p style="font-size: 30px">We are a rookie community First Tech Challenge (FTC) team based in the Santa Clara area. Our team consists of
+            <h2 style="font-size: 40px">Who are we?</h2>
+            <p style="font-size: 25px">We are a rookie community First Tech Challenge (FTC) team based in the Santa Clara area. Our team consists of
                 motivated and aspiring individuals who are dedicated to enhancing their knowledge of all things STEM and to
                 harboring a new generation of future ready engineers. You can see and contact off the team members below.
             </p>
@@ -128,16 +132,16 @@
             <h2><img src="Images/first%20tech%20challnege.jpg" width="450"/></h2>
         </div>
         <div class="column" style="background-color:rgb(130, 166, 185);">
-            <h2 style="font-size: 50px">What is FTC?</h2>
-            <p style="font-size: 30px">What is FTC?</p>
+            <h2 style="font-size: 40px">What is FTC?</h2>
+            <p style="font-size: 25px">What is FTC?</p>
         </div>
     </div>
 
     <div class="row" style="margin-left: 60px; margin-top: 20px;">
 
         <div class="column" style="background-color:rgb(130, 166, 185);">
-            <h2 style="font-size: 50px">Our Goals</h2>
-            <p style="font-size: 30px">Our current goal is to raise funds and establish groundwork so that next FTC season we can hit the ground
+            <h2 style="font-size: 40px">Our Goals</h2>
+            <p style="font-size: 25px">Our current goal is to raise funds and establish groundwork so that next FTC season we can hit the ground
             running and compete to the best of our abilities. Achieving this goal implies finding sponsors,a applying for grants
             , and running fundraisers like bake sales and summer programs.</p>
         </div>
@@ -151,14 +155,14 @@
 <footer class="footer">
     <br>
     <div class="row" style="margin-left: 60px; margin-top: 20px;">
-        <div class="column" style="background-color: rgb(208, 175, 126); height: 150px;">
+        <div class="column" style="background-color: rgb(208, 175, 126); height: 140px;">
             <h1 style="text-align: center;">Contact Us</h1>
             <h2 style="padding-left: 33%;"><p class="left-text"><a href="https://www.instagram.com/melonsinthecosmos/">• Instagram: @BoxOfScraps</a></p>
                 <p class="left-text"><a href="mailto:michaeldub@boxofscraps.net">• Email Us: scrap@boxofscraps.net</a></p>
                 <p class="left-text"><a href="https://www.instagram.com/">• some other social media</a></p>
             </h2>
         </div>
-        <div class="column" style="background-color:rgb(208, 175, 126); height: 150px">
+        <div class="column" style="background-color:rgb(208, 175, 126); height: 140px">
             <h1>Explore the Website!</h1>
             <h2 style="font-size: 35px;"><a href="About Us.html">About Us</a>
                 |
