--- a/root/About Us.html
+++ b/root/About Us.html
@@ -7,6 +7,9 @@
             font-family: Gabarito;
             src: url(fonts/Gabarito-VariableFont_wght.ttf);
         }
+        html{
+                    min-width: 1000px;
+}
         * {
             margin: 0;
             padding: 0;
@@ -32,7 +35,6 @@
             height: 100%;
             color: RGB(115, 125, 130);
             text-align: center;
-            min-width: 40px;
         }
         .footer {
             background-color:#E4B97E;
@@ -157,8 +159,8 @@
     <div class="row" style="margin-left: 60px; margin-top: 20px;">
         <div class="column" style="background-color: rgb(208, 175, 126); height: 140px;">
             <h1 style="text-align: center;">Contact Us</h1>
-            <h2 style="padding-left: 33%;"><p class="left-text"><a href="https://www.instagram.com/melonsinthecosmos/">• Instagram: @BoxOfScraps</a></p>
-                <p class="left-text"><a href="mailto:michaeldub@boxofscraps.net">• Email Us: scrap@boxofscraps.net</a></p>
+            <h2 style="padding-left: 29%;"><p class="left-text"><a href="https://www.instagram.com/melonsinthecosmos/">• Instagram: @BoxOfScraps</a></p>
+                <p class="left-text"><a href="mailto:michaeldub@boxofscraps.net">• Email Us: @boxofscraps.net</a></p>
                 <p class="left-text"><a href="https://www.instagram.com/">• some other social media</a></p>
             </h2>
         </div>
