--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>sup world</title>
+    <title>HTML Meta Tag</title>
+    <meta http-equiv = "refresh" content = "0; url = https://www.boxofscraps.net/About%20Us.html" />
 </head>
 <body>
-
+<p>Redirecting to another URL</p>
 </body>
 </html>
