--- a/Updates.html
+++ b/Updates.html
@@ -96,10 +96,10 @@
 
 <div class="header-logo">
     <h1>
-        <a href="Home.html">
+        <a href="About%20Us.html">
             <img src="Images/box_of_scraps_logo.png" height="114" style="vertical-align:middle"/>
         </a>
-        <a href="Home.html">Box of Scraps</a>
+        <a href="About%20Us.html">Box of Scraps</a>
         <div class="header-right">
             <a href="About Us.html">About Us</a>
             |
