--- a/About Us.html
+++ b/About Us.html
@@ -158,10 +158,10 @@
     <br>
     <div class="row" style="margin-left: 60px; margin-top: 20px;">
         <div class="column" style="background-color: rgb(208, 175, 126); height: 140px;">
-            <h1 style="text-align: center;">Contact Us</h1>
-            <h2 style="padding-left: 29%;"><p class="left-text"><a href="https://www.instagram.com/melonsinthecosmos/">• Instagram: @BoxOfScraps</a></p>
-                <p class="left-text"><a href="mailto:michaeldub@boxofscraps.net">• Email Us: @boxofscraps.net</a></p>
-                <p class="left-text"><a href="https://www.instagram.com/">• some other social media</a></p>
+            <h1>Contact Us</h1>
+            <h2><p class="center-text"><a href="https://www.instagram.com/melonsinthecosmos/">• Instagram: @BoxOfScraps</a></p>
+                <p class="center-text"><a href="mailto:michaeldub@boxofscraps.net">• Email Us: @boxofscraps.net</a></p>
+                <p class="center-text"><a href="https://www.instagram.com/">• some other social media</a></p>
             </h2>
         </div>
         <div class="column" style="background-color:rgb(208, 175, 126); height: 140px">
