--- a/About Us.html
+++ b/About Us.html
@@ -135,7 +135,12 @@
         </div>
         <div class="column" style="background-color:rgb(130, 166, 185);">
             <h2 style="font-size: 40px">What is FTC?</h2>
-            <p style="font-size: 25px">What is FTC?</p>
+            <p style="font-size: 25px">FTC, which stands for “FIRST Tech Challenge”, is, put simply, a robotics competition for middle
+                and high school students (7th-12th grade). Every September, a challenge is issued that FTC teams must
+                work to meet. With the help of mentors and volunteers, these teams design, program, and build working
+                classroom-scale robots before competing against each other in two-on-two matches. FTC provides students
+                with the opportunity to gain valuable STEM skills, engineering experience, teamwork skills, and confidence
+                in themselves.</p>
         </div>
     </div>
 
