--- a/About Us.html
+++ b/About Us.html
@@ -97,7 +97,7 @@
 <div class="header-logo">
     <h1>
         <a href="About%20Us.html">
-            <img src="Images/box_of_scraps_logo.png" height="114" style="vertical-align:middle"/>
+            <img src="Images/BOS logo v2.png" height="114" style="vertical-align:middle"/>
         </a>
         <a href="About%20Us.html">Box of Scraps</a>
         <div class="header-right">
@@ -121,11 +121,11 @@
             <h2 style="font-size: 40px">Who are we?</h2>
             <p style="font-size: 25px">We are a rookie community First Tech Challenge (FTC) team based in the Santa Clara area. Our team consists of
                 motivated and aspiring individuals who are dedicated to enhancing their knowledge of all things STEM and to
-                harboring a new generation of future ready engineers. You can see and contact off the team members below.
+                harboring a new generation of future ready engineers.
             </p>
         </div>
         <div class="column" style="background-color:rgb(130, 166, 185);">
-            <h2><img src="Images/box_of_scraps_logo.png"/></h2>
+            <h2><img src="Images/BOS logo v2.png" width="475vw"/></h2>
         </div>
     </div>
 
