--- a/Updates.html
+++ b/Updates.html
@@ -29,7 +29,7 @@
             background-color:#82B0CD;
             font-family: Gabarito,serif;
             height: 100%;
-            color: rgb(50,100,50);
+            color: rgb(89,87,93);
             text-align: center;
         }
         .footer {
@@ -106,7 +106,15 @@
 </div>
 <div class="body">
     <h2>
-        <br>
+        <!-- <br> -->
+        <div class="row" style="margin-left: 60px">
+            <div class="column" style="background-color: rgb(130, 166, 185);">
+                <h2 style="font-size:50px">Update - #1 - 1/3/25</h2>
+                <p style="font-size: 30px">We are so far looking into getting sponsors and grants<br> from companies that are willing to help support our organization.</p>
+            </div>
+            <div class="column" style="background-color:rgb(130, 166, 185);">
+            </div>
+        </div>
     </h2>
 </div>
 
