--- a/About Us.html
+++ b/About Us.html
@@ -153,7 +153,7 @@
             , and running fundraisers like bake sales and summer programs.</p>
         </div>
         <div class="column" style="background-color: rgb(130, 166, 185);">
-            <h2>image</h2>
+            <h2><img src="Images/FTC%20goals%20image.jpg" width="800"/></h2>
         </div>
     </div>
 <br><br>
