First Sponsor: Costco
Added costco to sponsorship list and made an update about it

--- a/Updates.html
+++ b/Updates.html
@@ -115,6 +115,18 @@
 <div class="body">
     <h2>
         <br>
+        <div class="row" style="margin-left: 60px">
+            <div class="column" style="background-color: rgb(130, 166, 185);">
+                <h2 style="font-size: 40px">Our first Grant!</h2>
+                <p style="font-size: 25px">We have recently gotten a reply back from our first approved grant, Costco Wholesale! You can see them listed in the <a href="Fundraising.html" style="color: rgb(53, 112, 180)">Fundraising</a> tab on this website as an Iron Box Sponsor.
+                    They have given us $100 in costco credit, it isn't much, but it's a great start! We look forward to getting more sponsors and grants soon.
+                </p>
+            </div>
+            <div class="column" style="background-color:rgb(130, 166, 185);">
+                <h2><img src="Images/Costco_Wholesale_logo_2010-10-26.svg.webp" width="700"/></h2>
+            </div>
+        </div>
+        <br>
     </h2>
 </div>
 
